objects/Letter_Template__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Letter Templates</relationshipLabel>
        <relationshipName>Letter_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Footer__c</fullName>
        <label>Footer</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Header__c</fullName>
        <label>Header</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Letter Templates</relationshipLabel>
        <relationshipName>Letter_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Letter Template</label>
    <nameField>
        <label>Letter Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Letter Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>